parser.out
Grammar:

Rule 0     S' -> statements
Rule 1     statements -> statements stmt
Rule 2     statements -> stmt
Rule 3     stmt -> RETURN expr ;
Rule 4     stmt -> CONTINUE ;
Rule 5     stmt -> BREAK ;
Rule 6     stmt -> print_stmt
Rule 7     stmt -> assign_expr
Rule 8     stmt -> for_stmt
Rule 9     stmt -> while_stmt
Rule 10    stmt -> if_stmt
Rule 11    stmt -> { statements }
Rule 12    stmt -> ;
Rule 13    if_stmt -> IF ( rel_expr ) stmt  [precedence=nonassoc, level=1]
Rule 14    if_stmt -> IF ( rel_expr ) stmt ELSE stmt  [precedence=nonassoc, level=2]
Rule 15    int_referance -> INTNUM
Rule 16    int_referance -> referance
Rule 17    for_stmt -> FOR referance = int_referance : int_referance stmt
Rule 18    while_stmt -> WHILE ( rel_expr ) stmt
Rule 19    print_stmt -> PRINT expr
Rule 20    value -> STRING
Rule 21    value -> FLOATNUM
Rule 22    value -> INTNUM
Rule 23    value_vector -> value_vector , value
Rule 24    value_vector -> value
Rule 25    referance -> ID [ value_vector ]
Rule 26    referance -> ID
Rule 27    expr -> expr DOTDIV expr  [precedence=left, level=5]
Rule 28    expr -> expr DOTMUL expr  [precedence=left, level=5]
Rule 29    expr -> expr DOTSUB expr  [precedence=left, level=4]
Rule 30    expr -> expr DOTADD expr  [precedence=left, level=4]
Rule 31    expr -> expr DIV expr  [precedence=left, level=5]
Rule 32    expr -> expr MUL expr  [precedence=left, level=5]
Rule 33    expr -> expr SUB expr  [precedence=left, level=4]
Rule 34    expr -> expr ADD expr  [precedence=left, level=4]
Rule 35    expr -> rel_expr
Rule 36    expr -> value_vector
Rule 37    rel_expr -> expr NEQ expr  [precedence=nonassoc, level=3]
Rule 38    rel_expr -> expr EQ expr  [precedence=nonassoc, level=3]
Rule 39    rel_expr -> expr GTE expr  [precedence=nonassoc, level=3]
Rule 40    rel_expr -> expr LTE expr  [precedence=nonassoc, level=3]
Rule 41    rel_expr -> expr GT expr  [precedence=nonassoc, level=3]
Rule 42    rel_expr -> expr LT expr  [precedence=nonassoc, level=3]
Rule 43    assign_expr -> referance DIVASSIGN expr
Rule 44    assign_expr -> referance MULASSIGN expr
Rule 45    assign_expr -> referance SUBASSIGN expr
Rule 46    assign_expr -> referance ADDASSIGN expr
Rule 47    assign_expr -> referance = expr

Unused terminals:

    ZEROS
    ONES
    EYE

Terminals, with rules where they appear:

(                    : 13 14 18
)                    : 13 14 18
,                    : 23
:                    : 17
;                    : 3 4 5 12
=                    : 17 47
ADD                  : 34
ADDASSIGN            : 46
BREAK                : 5
CONTINUE             : 4
DIV                  : 31
DIVASSIGN            : 43
DOTADD               : 30
DOTDIV               : 27
DOTMUL               : 28
DOTSUB               : 29
ELSE                 : 14
EQ                   : 38
EYE                  : 
FLOATNUM             : 21
FOR                  : 17
GT                   : 41
GTE                  : 39
ID                   : 25 26
IF                   : 13 14
INTNUM               : 15 22
LT                   : 42
LTE                  : 40
MUL                  : 32
MULASSIGN            : 44
NEQ                  : 37
ONES                 : 
PRINT                : 19
RETURN               : 3
STRING               : 20
SUB                  : 33
SUBASSIGN            : 45
WHILE                : 18
ZEROS                : 
[                    : 25
]                    : 25
error                : 
{                    : 11
}                    : 11

Nonterminals, with rules where they appear:

assign_expr          : 7
expr                 : 3 19 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 37 37 38 38 39 39 40 40 41 41 42 42 43 44 45 46 47
for_stmt             : 8
if_stmt              : 10
int_referance        : 17 17
print_stmt           : 6
referance            : 16 17 43 44 45 46 47
rel_expr             : 13 14 18 35
statements           : 1 11 0
stmt                 : 1 2 13 14 14 17 18
value                : 23 24
value_vector         : 23 25 36
while_stmt           : 9


state 0

    (0) S' -> . statements
    (1) statements -> . statements stmt
    (2) statements -> . stmt
    (3) stmt -> . RETURN expr ;
    (4) stmt -> . CONTINUE ;
    (5) stmt -> . BREAK ;
    (6) stmt -> . print_stmt
    (7) stmt -> . assign_expr
    (8) stmt -> . for_stmt
    (9) stmt -> . while_stmt
    (10) stmt -> . if_stmt
    (11) stmt -> . { statements }
    (12) stmt -> . ;
    (19) print_stmt -> . PRINT expr
    (43) assign_expr -> . referance DIVASSIGN expr
    (44) assign_expr -> . referance MULASSIGN expr
    (45) assign_expr -> . referance SUBASSIGN expr
    (46) assign_expr -> . referance ADDASSIGN expr
    (47) assign_expr -> . referance = expr
    (17) for_stmt -> . FOR referance = int_referance : int_referance stmt
    (18) while_stmt -> . WHILE ( rel_expr ) stmt
    (13) if_stmt -> . IF ( rel_expr ) stmt
    (14) if_stmt -> . IF ( rel_expr ) stmt ELSE stmt
    (25) referance -> . ID [ value_vector ]
    (26) referance -> . ID
    RETURN          shift and go to state 3
    CONTINUE        shift and go to state 5
    BREAK           shift and go to state 6
    {               shift and go to state 12
    ;               shift and go to state 4
    PRINT           shift and go to state 13
    FOR             shift and go to state 15
    WHILE           shift and go to state 16
    IF              shift and go to state 17
    ID              shift and go to state 18

    statements                     shift and go to state 1
    stmt                           shift and go to state 2
    print_stmt                     shift and go to state 7
    assign_expr                    shift and go to state 8
    for_stmt                       shift and go to state 9
    while_stmt                     shift and go to state 10
    if_stmt                        shift and go to state 11
    referance                      shift and go to state 14

state 1

    (0) S' -> statements .
    (1) statements -> statements . stmt
    (3) stmt -> . RETURN expr ;
    (4) stmt -> . CONTINUE ;
    (5) stmt -> . BREAK ;
    (6) stmt -> . print_stmt
    (7) stmt -> . assign_expr
    (8) stmt -> . for_stmt
    (9) stmt -> . while_stmt
    (10) stmt -> . if_stmt
    (11) stmt -> . { statements }
    (12) stmt -> . ;
    (19) print_stmt -> . PRINT expr
    (43) assign_expr -> . referance DIVASSIGN expr
    (44) assign_expr -> . referance MULASSIGN expr
    (45) assign_expr -> . referance SUBASSIGN expr
    (46) assign_expr -> . referance ADDASSIGN expr
    (47) assign_expr -> . referance = expr
    (17) for_stmt -> . FOR referance = int_referance : int_referance stmt
    (18) while_stmt -> . WHILE ( rel_expr ) stmt
    (13) if_stmt -> . IF ( rel_expr ) stmt
    (14) if_stmt -> . IF ( rel_expr ) stmt ELSE stmt
    (25) referance -> . ID [ value_vector ]
    (26) referance -> . ID
    RETURN          shift and go to state 3
    CONTINUE        shift and go to state 5
    BREAK           shift and go to state 6
    {               shift and go to state 12
    ;               shift and go to state 4
    PRINT           shift and go to state 13
    FOR             shift and go to state 15
    WHILE           shift and go to state 16
    IF              shift and go to state 17
    ID              shift and go to state 18

    stmt                           shift and go to state 19
    print_stmt                     shift and go to state 7
    assign_expr                    shift and go to state 8
    for_stmt                       shift and go to state 9
    while_stmt                     shift and go to state 10
    if_stmt                        shift and go to state 11
    referance                      shift and go to state 14

state 2

    (2) statements -> stmt .
    RETURN          reduce using rule 2 (statements -> stmt .)
    CONTINUE        reduce using rule 2 (statements -> stmt .)
    BREAK           reduce using rule 2 (statements -> stmt .)
    {               reduce using rule 2 (statements -> stmt .)
    ;               reduce using rule 2 (statements -> stmt .)
    PRINT           reduce using rule 2 (statements -> stmt .)
    FOR             reduce using rule 2 (statements -> stmt .)
    WHILE           reduce using rule 2 (statements -> stmt .)
    IF              reduce using rule 2 (statements -> stmt .)
    ID              reduce using rule 2 (statements -> stmt .)
    $end            reduce using rule 2 (statements -> stmt .)
    }               reduce using rule 2 (statements -> stmt .)


state 3

    (3) stmt -> RETURN . expr ;
    (27) expr -> . expr DOTDIV expr
    (28) expr -> . expr DOTMUL expr
    (29) expr -> . expr DOTSUB expr
    (30) expr -> . expr DOTADD expr
    (31) expr -> . expr DIV expr
    (32) expr -> . expr MUL expr
    (33) expr -> . expr SUB expr
    (34) expr -> . expr ADD expr
    (35) expr -> . rel_expr
    (36) expr -> . value_vector
    (37) rel_expr -> . expr NEQ expr
    (38) rel_expr -> . expr EQ expr
    (39) rel_expr -> . expr GTE expr
    (40) rel_expr -> . expr LTE expr
    (41) rel_expr -> . expr GT expr
    (42) rel_expr -> . expr LT expr
    (23) value_vector -> . value_vector , value
    (24) value_vector -> . value
    (20) value -> . STRING
    (21) value -> . FLOATNUM
    (22) value -> . INTNUM
    STRING          shift and go to state 24
    FLOATNUM        shift and go to state 25
    INTNUM          shift and go to state 26

    expr                           shift and go to state 20
    rel_expr                       shift and go to state 21
    value_vector                   shift and go to state 22
    value                          shift and go to state 23

state 4

    (12) stmt -> ; .
    RETURN          reduce using rule 12 (stmt -> ; .)
    CONTINUE        reduce using rule 12 (stmt -> ; .)
    BREAK           reduce using rule 12 (stmt -> ; .)
    {               reduce using rule 12 (stmt -> ; .)
    ;               reduce using rule 12 (stmt -> ; .)
    PRINT           reduce using rule 12 (stmt -> ; .)
    FOR             reduce using rule 12 (stmt -> ; .)
    WHILE           reduce using rule 12 (stmt -> ; .)
    IF              reduce using rule 12 (stmt -> ; .)
    ID              reduce using rule 12 (stmt -> ; .)
    $end            reduce using rule 12 (stmt -> ; .)
    }               reduce using rule 12 (stmt -> ; .)
    ELSE            reduce using rule 12 (stmt -> ; .)


state 5

    (4) stmt -> CONTINUE . ;
    ;               shift and go to state 27


state 6

    (5) stmt -> BREAK . ;
    ;               shift and go to state 28


state 7

    (6) stmt -> print_stmt .
    RETURN          reduce using rule 6 (stmt -> print_stmt .)
    CONTINUE        reduce using rule 6 (stmt -> print_stmt .)
    BREAK           reduce using rule 6 (stmt -> print_stmt .)
    {               reduce using rule 6 (stmt -> print_stmt .)
    ;               reduce using rule 6 (stmt -> print_stmt .)
    PRINT           reduce using rule 6 (stmt -> print_stmt .)
    FOR             reduce using rule 6 (stmt -> print_stmt .)
    WHILE           reduce using rule 6 (stmt -> print_stmt .)
    IF              reduce using rule 6 (stmt -> print_stmt .)
    ID              reduce using rule 6 (stmt -> print_stmt .)
    $end            reduce using rule 6 (stmt -> print_stmt .)
    }               reduce using rule 6 (stmt -> print_stmt .)
    ELSE            reduce using rule 6 (stmt -> print_stmt .)


state 8

    (7) stmt -> assign_expr .
    RETURN          reduce using rule 7 (stmt -> assign_expr .)
    CONTINUE        reduce using rule 7 (stmt -> assign_expr .)
    BREAK           reduce using rule 7 (stmt -> assign_expr .)
    {               reduce using rule 7 (stmt -> assign_expr .)
    ;               reduce using rule 7 (stmt -> assign_expr .)
    PRINT           reduce using rule 7 (stmt -> assign_expr .)
    FOR             reduce using rule 7 (stmt -> assign_expr .)
    WHILE           reduce using rule 7 (stmt -> assign_expr .)
    IF              reduce using rule 7 (stmt -> assign_expr .)
    ID              reduce using rule 7 (stmt -> assign_expr .)
    $end            reduce using rule 7 (stmt -> assign_expr .)
    }               reduce using rule 7 (stmt -> assign_expr .)
    ELSE            reduce using rule 7 (stmt -> assign_expr .)


state 9

    (8) stmt -> for_stmt .
    RETURN          reduce using rule 8 (stmt -> for_stmt .)
    CONTINUE        reduce using rule 8 (stmt -> for_stmt .)
    BREAK           reduce using rule 8 (stmt -> for_stmt .)
    {               reduce using rule 8 (stmt -> for_stmt .)
    ;               reduce using rule 8 (stmt -> for_stmt .)
    PRINT           reduce using rule 8 (stmt -> for_stmt .)
    FOR             reduce using rule 8 (stmt -> for_stmt .)
    WHILE           reduce using rule 8 (stmt -> for_stmt .)
    IF              reduce using rule 8 (stmt -> for_stmt .)
    ID              reduce using rule 8 (stmt -> for_stmt .)
    $end            reduce using rule 8 (stmt -> for_stmt .)
    }               reduce using rule 8 (stmt -> for_stmt .)
    ELSE            reduce using rule 8 (stmt -> for_stmt .)


state 10

    (9) stmt -> while_stmt .
    RETURN          reduce using rule 9 (stmt -> while_stmt .)
    CONTINUE        reduce using rule 9 (stmt -> while_stmt .)
    BREAK           reduce using rule 9 (stmt -> while_stmt .)
    {               reduce using rule 9 (stmt -> while_stmt .)
    ;               reduce using rule 9 (stmt -> while_stmt .)
    PRINT           reduce using rule 9 (stmt -> while_stmt .)
    FOR             reduce using rule 9 (stmt -> while_stmt .)
    WHILE           reduce using rule 9 (stmt -> while_stmt .)
    IF              reduce using rule 9 (stmt -> while_stmt .)
    ID              reduce using rule 9 (stmt -> while_stmt .)
    $end            reduce using rule 9 (stmt -> while_stmt .)
    }               reduce using rule 9 (stmt -> while_stmt .)
    ELSE            reduce using rule 9 (stmt -> while_stmt .)


state 11

    (10) stmt -> if_stmt .
    RETURN          reduce using rule 10 (stmt -> if_stmt .)
    CONTINUE        reduce using rule 10 (stmt -> if_stmt .)
    BREAK           reduce using rule 10 (stmt -> if_stmt .)
    {               reduce using rule 10 (stmt -> if_stmt .)
    ;               reduce using rule 10 (stmt -> if_stmt .)
    PRINT           reduce using rule 10 (stmt -> if_stmt .)
    FOR             reduce using rule 10 (stmt -> if_stmt .)
    WHILE           reduce using rule 10 (stmt -> if_stmt .)
    IF              reduce using rule 10 (stmt -> if_stmt .)
    ID              reduce using rule 10 (stmt -> if_stmt .)
    $end            reduce using rule 10 (stmt -> if_stmt .)
    }               reduce using rule 10 (stmt -> if_stmt .)
    ELSE            reduce using rule 10 (stmt -> if_stmt .)


state 12

    (11) stmt -> { . statements }
    (1) statements -> . statements stmt
    (2) statements -> . stmt
    (3) stmt -> . RETURN expr ;
    (4) stmt -> . CONTINUE ;
    (5) stmt -> . BREAK ;
    (6) stmt -> . print_stmt
    (7) stmt -> . assign_expr
    (8) stmt -> . for_stmt
    (9) stmt -> . while_stmt
    (10) stmt -> . if_stmt
    (11) stmt -> . { statements }
    (12) stmt -> . ;
    (19) print_stmt -> . PRINT expr
    (43) assign_expr -> . referance DIVASSIGN expr
    (44) assign_expr -> . referance MULASSIGN expr
    (45) assign_expr -> . referance SUBASSIGN expr
    (46) assign_expr -> . referance ADDASSIGN expr
    (47) assign_expr -> . referance = expr
    (17) for_stmt -> . FOR referance = int_referance : int_referance stmt
    (18) while_stmt -> . WHILE ( rel_expr ) stmt
    (13) if_stmt -> . IF ( rel_expr ) stmt
    (14) if_stmt -> . IF ( rel_expr ) stmt ELSE stmt
    (25) referance -> . ID [ value_vector ]
    (26) referance -> . ID
    RETURN          shift and go to state 3
    CONTINUE        shift and go to state 5
    BREAK           shift and go to state 6
    {               shift and go to state 12
    ;               shift and go to state 4
    PRINT           shift and go to state 13
    FOR             shift and go to state 15
    WHILE           shift and go to state 16
    IF              shift and go to state 17
    ID              shift and go to state 18

    statements                     shift and go to state 29
    stmt                           shift and go to state 2
    print_stmt                     shift and go to state 7
    assign_expr                    shift and go to state 8
    for_stmt                       shift and go to state 9
    while_stmt                     shift and go to state 10
    if_stmt                        shift and go to state 11
    referance                      shift and go to state 14

state 13

    (19) print_stmt -> PRINT . expr
    (27) expr -> . expr DOTDIV expr
    (28) expr -> . expr DOTMUL expr
    (29) expr -> . expr DOTSUB expr
    (30) expr -> . expr DOTADD expr
    (31) expr -> . expr DIV expr
    (32) expr -> . expr MUL expr
    (33) expr -> . expr SUB expr
    (34) expr -> . expr ADD expr
    (35) expr -> . rel_expr
    (36) expr -> . value_vector
    (37) rel_expr -> . expr NEQ expr
    (38) rel_expr -> . expr EQ expr
    (39) rel_expr -> . expr GTE expr
    (40) rel_expr -> . expr LTE expr
    (41) rel_expr -> . expr GT expr
    (42) rel_expr -> . expr LT expr
    (23) value_vector -> . value_vector , value
    (24) value_vector -> . value
    (20) value -> . STRING
    (21) value -> . FLOATNUM
    (22) value -> . INTNUM
    STRING          shift and go to state 24
    FLOATNUM        shift and go to state 25
    INTNUM          shift and go to state 26

    expr                           shift and go to state 30
    rel_expr                       shift and go to state 21
    value_vector                   shift and go to state 22
    value                          shift and go to state 23

state 14

    (43) assign_expr -> referance . DIVASSIGN expr
    (44) assign_expr -> referance . MULASSIGN expr
    (45) assign_expr -> referance . SUBASSIGN expr
    (46) assign_expr -> referance . ADDASSIGN expr
    (47) assign_expr -> referance . = expr
    DIVASSIGN       shift and go to state 31
    MULASSIGN       shift and go to state 32
    SUBASSIGN       shift and go to state 33
    ADDASSIGN       shift and go to state 34
    =               shift and go to state 35


state 15

    (17) for_stmt -> FOR . referance = int_referance : int_referance stmt
    (25) referance -> . ID [ value_vector ]
    (26) referance -> . ID
    ID              shift and go to state 18

    referance                      shift and go to state 36

state 16

    (18) while_stmt -> WHILE . ( rel_expr ) stmt
    (               shift and go to state 37


state 17

    (13) if_stmt -> IF . ( rel_expr ) stmt
    (14) if_stmt -> IF . ( rel_expr ) stmt ELSE stmt
    (               shift and go to state 38


state 18

    (25) referance -> ID . [ value_vector ]
    (26) referance -> ID .
    [               shift and go to state 39
    DIVASSIGN       reduce using rule 26 (referance -> ID .)
    MULASSIGN       reduce using rule 26 (referance -> ID .)
    SUBASSIGN       reduce using rule 26 (referance -> ID .)
    ADDASSIGN       reduce using rule 26 (referance -> ID .)
    =               reduce using rule 26 (referance -> ID .)
    :               reduce using rule 26 (referance -> ID .)
    RETURN          reduce using rule 26 (referance -> ID .)
    CONTINUE        reduce using rule 26 (referance -> ID .)
    BREAK           reduce using rule 26 (referance -> ID .)
    {               reduce using rule 26 (referance -> ID .)
    ;               reduce using rule 26 (referance -> ID .)
    PRINT           reduce using rule 26 (referance -> ID .)
    FOR             reduce using rule 26 (referance -> ID .)
    WHILE           reduce using rule 26 (referance -> ID .)
    IF              reduce using rule 26 (referance -> ID .)
    ID              reduce using rule 26 (referance -> ID .)


state 19

    (1) statements -> statements stmt .
    RETURN          reduce using rule 1 (statements -> statements stmt .)
    CONTINUE        reduce using rule 1 (statements -> statements stmt .)
    BREAK           reduce using rule 1 (statements -> statements stmt .)
    {               reduce using rule 1 (statements -> statements stmt .)
    ;               reduce using rule 1 (statements -> statements stmt .)
    PRINT           reduce using rule 1 (statements -> statements stmt .)
    FOR             reduce using rule 1 (statements -> statements stmt .)
    WHILE           reduce using rule 1 (statements -> statements stmt .)
    IF              reduce using rule 1 (statements -> statements stmt .)
    ID              reduce using rule 1 (statements -> statements stmt .)
    $end            reduce using rule 1 (statements -> statements stmt .)
    }               reduce using rule 1 (statements -> statements stmt .)


state 20

    (3) stmt -> RETURN expr . ;
    (27) expr -> expr . DOTDIV expr
    (28) expr -> expr . DOTMUL expr
    (29) expr -> expr . DOTSUB expr
    (30) expr -> expr . DOTADD expr
    (31) expr -> expr . DIV expr
    (32) expr -> expr . MUL expr
    (33) expr -> expr . SUB expr
    (34) expr -> expr . ADD expr
    (37) rel_expr -> expr . NEQ expr
    (38) rel_expr -> expr . EQ expr
    (39) rel_expr -> expr . GTE expr
    (40) rel_expr -> expr . LTE expr
    (41) rel_expr -> expr . GT expr
    (42) rel_expr -> expr . LT expr
    ;               shift and go to state 40
    DOTDIV          shift and go to state 41
    DOTMUL          shift and go to state 42
    DOTSUB          shift and go to state 43
    DOTADD          shift and go to state 44
    DIV             shift and go to state 45
    MUL             shift and go to state 46
    SUB             shift and go to state 47
    ADD             shift and go to state 48
    NEQ             shift and go to state 49
    EQ              shift and go to state 50
    GTE             shift and go to state 51
    LTE             shift and go to state 52
    GT              shift and go to state 53
    LT              shift and go to state 54


state 21

    (35) expr -> rel_expr .
    ;               reduce using rule 35 (expr -> rel_expr .)
    DOTDIV          reduce using rule 35 (expr -> rel_expr .)
    DOTMUL          reduce using rule 35 (expr -> rel_expr .)
    DOTSUB          reduce using rule 35 (expr -> rel_expr .)
    DOTADD          reduce using rule 35 (expr -> rel_expr .)
    DIV             reduce using rule 35 (expr -> rel_expr .)
    MUL             reduce using rule 35 (expr -> rel_expr .)
    SUB             reduce using rule 35 (expr -> rel_expr .)
    ADD             reduce using rule 35 (expr -> rel_expr .)
    NEQ             reduce using rule 35 (expr -> rel_expr .)
    EQ              reduce using rule 35 (expr -> rel_expr .)
    GTE             reduce using rule 35 (expr -> rel_expr .)
    LTE             reduce using rule 35 (expr -> rel_expr .)
    GT              reduce using rule 35 (expr -> rel_expr .)
    LT              reduce using rule 35 (expr -> rel_expr .)
    RETURN          reduce using rule 35 (expr -> rel_expr .)
    CONTINUE        reduce using rule 35 (expr -> rel_expr .)
    BREAK           reduce using rule 35 (expr -> rel_expr .)
    {               reduce using rule 35 (expr -> rel_expr .)
    PRINT           reduce using rule 35 (expr -> rel_expr .)
    FOR             reduce using rule 35 (expr -> rel_expr .)
    WHILE           reduce using rule 35 (expr -> rel_expr .)
    IF              reduce using rule 35 (expr -> rel_expr .)
    ID              reduce using rule 35 (expr -> rel_expr .)
    $end            reduce using rule 35 (expr -> rel_expr .)
    }               reduce using rule 35 (expr -> rel_expr .)
    ELSE            reduce using rule 35 (expr -> rel_expr .)
    )               reduce using rule 35 (expr -> rel_expr .)


state 22

    (36) expr -> value_vector .
    (23) value_vector -> value_vector . , value
    ;               reduce using rule 36 (expr -> value_vector .)
    DOTDIV          reduce using rule 36 (expr -> value_vector .)
    DOTMUL          reduce using rule 36 (expr -> value_vector .)
    DOTSUB          reduce using rule 36 (expr -> value_vector .)
    DOTADD          reduce using rule 36 (expr -> value_vector .)
    DIV             reduce using rule 36 (expr -> value_vector .)
    MUL             reduce using rule 36 (expr -> value_vector .)
    SUB             reduce using rule 36 (expr -> value_vector .)
    ADD             reduce using rule 36 (expr -> value_vector .)
    NEQ             reduce using rule 36 (expr -> value_vector .)
    EQ              reduce using rule 36 (expr -> value_vector .)
    GTE             reduce using rule 36 (expr -> value_vector .)
    LTE             reduce using rule 36 (expr -> value_vector .)
    GT              reduce using rule 36 (expr -> value_vector .)
    LT              reduce using rule 36 (expr -> value_vector .)
    RETURN          reduce using rule 36 (expr -> value_vector .)
    CONTINUE        reduce using rule 36 (expr -> value_vector .)
    BREAK           reduce using rule 36 (expr -> value_vector .)
    {               reduce using rule 36 (expr -> value_vector .)
    PRINT           reduce using rule 36 (expr -> value_vector .)
    FOR             reduce using rule 36 (expr -> value_vector .)
    WHILE           reduce using rule 36 (expr -> value_vector .)
    IF              reduce using rule 36 (expr -> value_vector .)
    ID              reduce using rule 36 (expr -> value_vector .)
    $end            reduce using rule 36 (expr -> value_vector .)
    }               reduce using rule 36 (expr -> value_vector .)
    ELSE            reduce using rule 36 (expr -> value_vector .)
    )               reduce using rule 36 (expr -> value_vector .)
    ,               shift and go to state 55


state 23

    (24) value_vector -> value .
    ,               reduce using rule 24 (value_vector -> value .)
    ;               reduce using rule 24 (value_vector -> value .)
    DOTDIV          reduce using rule 24 (value_vector -> value .)
    DOTMUL          reduce using rule 24 (value_vector -> value .)
    DOTSUB          reduce using rule 24 (value_vector -> value .)
    DOTADD          reduce using rule 24 (value_vector -> value .)
    DIV             reduce using rule 24 (value_vector -> value .)
    MUL             reduce using rule 24 (value_vector -> value .)
    SUB             reduce using rule 24 (value_vector -> value .)
    ADD             reduce using rule 24 (value_vector -> value .)
    NEQ             reduce using rule 24 (value_vector -> value .)
    EQ              reduce using rule 24 (value_vector -> value .)
    GTE             reduce using rule 24 (value_vector -> value .)
    LTE             reduce using rule 24 (value_vector -> value .)
    GT              reduce using rule 24 (value_vector -> value .)
    LT              reduce using rule 24 (value_vector -> value .)
    RETURN          reduce using rule 24 (value_vector -> value .)
    CONTINUE        reduce using rule 24 (value_vector -> value .)
    BREAK           reduce using rule 24 (value_vector -> value .)
    {               reduce using rule 24 (value_vector -> value .)
    PRINT           reduce using rule 24 (value_vector -> value .)
    FOR             reduce using rule 24 (value_vector -> value .)
    WHILE           reduce using rule 24 (value_vector -> value .)
    IF              reduce using rule 24 (value_vector -> value .)
    ID              reduce using rule 24 (value_vector -> value .)
    $end            reduce using rule 24 (value_vector -> value .)
    }               reduce using rule 24 (value_vector -> value .)
    ELSE            reduce using rule 24 (value_vector -> value .)
    ]               reduce using rule 24 (value_vector -> value .)
    )               reduce using rule 24 (value_vector -> value .)


state 24

    (20) value -> STRING .
    ,               reduce using rule 20 (value -> STRING .)
    ;               reduce using rule 20 (value -> STRING .)
    DOTDIV          reduce using rule 20 (value -> STRING .)
    DOTMUL          reduce using rule 20 (value -> STRING .)
    DOTSUB          reduce using rule 20 (value -> STRING .)
    DOTADD          reduce using rule 20 (value -> STRING .)
    DIV             reduce using rule 20 (value -> STRING .)
    MUL             reduce using rule 20 (value -> STRING .)
    SUB             reduce using rule 20 (value -> STRING .)
    ADD             reduce using rule 20 (value -> STRING .)
    NEQ             reduce using rule 20 (value -> STRING .)
    EQ              reduce using rule 20 (value -> STRING .)
    GTE             reduce using rule 20 (value -> STRING .)
    LTE             reduce using rule 20 (value -> STRING .)
    GT              reduce using rule 20 (value -> STRING .)
    LT              reduce using rule 20 (value -> STRING .)
    RETURN          reduce using rule 20 (value -> STRING .)
    CONTINUE        reduce using rule 20 (value -> STRING .)
    BREAK           reduce using rule 20 (value -> STRING .)
    {               reduce using rule 20 (value -> STRING .)
    PRINT           reduce using rule 20 (value -> STRING .)
    FOR             reduce using rule 20 (value -> STRING .)
    WHILE           reduce using rule 20 (value -> STRING .)
    IF              reduce using rule 20 (value -> STRING .)
    ID              reduce using rule 20 (value -> STRING .)
    $end            reduce using rule 20 (value -> STRING .)
    }               reduce using rule 20 (value -> STRING .)
    ELSE            reduce using rule 20 (value -> STRING .)
    ]               reduce using rule 20 (value -> STRING .)
    )               reduce using rule 20 (value -> STRING .)


state 25

    (21) value -> FLOATNUM .
    ,               reduce using rule 21 (value -> FLOATNUM .)
    ;               reduce using rule 21 (value -> FLOATNUM .)
    DOTDIV          reduce using rule 21 (value -> FLOATNUM .)
    DOTMUL          reduce using rule 21 (value -> FLOATNUM .)
    DOTSUB          reduce using rule 21 (value -> FLOATNUM .)
    DOTADD          reduce using rule 21 (value -> FLOATNUM .)
    DIV             reduce using rule 21 (value -> FLOATNUM .)
    MUL             reduce using rule 21 (value -> FLOATNUM .)
    SUB             reduce using rule 21 (value -> FLOATNUM .)
    ADD             reduce using rule 21 (value -> FLOATNUM .)
    NEQ             reduce using rule 21 (value -> FLOATNUM .)
    EQ              reduce using rule 21 (value -> FLOATNUM .)
    GTE             reduce using rule 21 (value -> FLOATNUM .)
    LTE             reduce using rule 21 (value -> FLOATNUM .)
    GT              reduce using rule 21 (value -> FLOATNUM .)
    LT              reduce using rule 21 (value -> FLOATNUM .)
    RETURN          reduce using rule 21 (value -> FLOATNUM .)
    CONTINUE        reduce using rule 21 (value -> FLOATNUM .)
    BREAK           reduce using rule 21 (value -> FLOATNUM .)
    {               reduce using rule 21 (value -> FLOATNUM .)
    PRINT           reduce using rule 21 (value -> FLOATNUM .)
    FOR             reduce using rule 21 (value -> FLOATNUM .)
    WHILE           reduce using rule 21 (value -> FLOATNUM .)
    IF              reduce using rule 21 (value -> FLOATNUM .)
    ID              reduce using rule 21 (value -> FLOATNUM .)
    $end            reduce using rule 21 (value -> FLOATNUM .)
    }               reduce using rule 21 (value -> FLOATNUM .)
    ELSE            reduce using rule 21 (value -> FLOATNUM .)
    ]               reduce using rule 21 (value -> FLOATNUM .)
    )               reduce using rule 21 (value -> FLOATNUM .)


state 26

    (22) value -> INTNUM .
    ,               reduce using rule 22 (value -> INTNUM .)
    ;               reduce using rule 22 (value -> INTNUM .)
    DOTDIV          reduce using rule 22 (value -> INTNUM .)
    DOTMUL          reduce using rule 22 (value -> INTNUM .)
    DOTSUB          reduce using rule 22 (value -> INTNUM .)
    DOTADD          reduce using rule 22 (value -> INTNUM .)
    DIV             reduce using rule 22 (value -> INTNUM .)
    MUL             reduce using rule 22 (value -> INTNUM .)
    SUB             reduce using rule 22 (value -> INTNUM .)
    ADD             reduce using rule 22 (value -> INTNUM .)
    NEQ             reduce using rule 22 (value -> INTNUM .)
    EQ              reduce using rule 22 (value -> INTNUM .)
    GTE             reduce using rule 22 (value -> INTNUM .)
    LTE             reduce using rule 22 (value -> INTNUM .)
    GT              reduce using rule 22 (value -> INTNUM .)
    LT              reduce using rule 22 (value -> INTNUM .)
    RETURN          reduce using rule 22 (value -> INTNUM .)
    CONTINUE        reduce using rule 22 (value -> INTNUM .)
    BREAK           reduce using rule 22 (value -> INTNUM .)
    {               reduce using rule 22 (value -> INTNUM .)
    PRINT           reduce using rule 22 (value -> INTNUM .)
    FOR             reduce using rule 22 (value -> INTNUM .)
    WHILE           reduce using rule 22 (value -> INTNUM .)
    IF              reduce using rule 22 (value -> INTNUM .)
    ID              reduce using rule 22 (value -> INTNUM .)
    $end            reduce using rule 22 (value -> INTNUM .)
    }               reduce using rule 22 (value -> INTNUM .)
    ELSE            reduce using rule 22 (value -> INTNUM .)
    ]               reduce using rule 22 (value -> INTNUM .)
    )               reduce using rule 22 (value -> INTNUM .)


state 27
